@@ -20,7 +20,6 @@ package com.bytechef.task.dispatcher.branch.completion;
 
 import static com.bytechef.task.dispatcher.branch.constant.BranchTaskDispatcherConstants.BRANCH;
 import static com.bytechef.task.dispatcher.branch.constant.BranchTaskDispatcherConstants.CASES;
-import static com.bytechef.task.dispatcher.branch.constant.BranchTaskDispatcherConstants.DEFAULT;
 import static com.bytechef.task.dispatcher.branch.constant.BranchTaskDispatcherConstants.EXPRESSION;
 import static com.bytechef.task.dispatcher.branch.constant.BranchTaskDispatcherConstants.KEY;
 import static com.bytechef.task.dispatcher.branch.constant.BranchTaskDispatcherConstants.TASKS;
@@ -166,11 +165,20 @@ public class BranchTaskCompletionHandler implements TaskCompletionHandler {
             Object key = MapUtils.getRequired(branchCase, KEY);
 
             if (key.equals(expression)) {
-                return MapUtils.getList(branchCase, TASKS, WorkflowTask.class, Collections.emptyList());
+                return MapUtils
+                    .getList(
+                        branchCase, TASKS, new TypeReference<Map<String, ?>>() {}, List.of())
+                    .stream()
+                    .map(WorkflowTask::new)
+                    .toList();
             }
         }
 
-        return MapUtils.getList(
-            taskExecution.getParameters(), DEFAULT, WorkflowTask.class, Collections.emptyList());
+        return MapUtils
+            .getList(
+                taskExecution.getParameters(), TASKS, new TypeReference<Map<String, ?>>() {}, List.of())
+            .stream()
+            .map(WorkflowTask::new)
+            .toList();
     }
 }
